--- a/.github/workflows/buid.yml
+++ b/.github/workflows/buid.yml
@@ -1,7 +1,7 @@
-name: gradebuild
+name: CI
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Used to cache dependencies with a timeout
+    
       - name: Get Date
         id: get-date
         run: |
@@ -40,6 +40,3 @@ jobs:
         with:
           name: package
           path: ${{ steps.buildozer.outputs.filename }}
-
-          # Instead of using set-output, use environment files
-          run: echo "filename=${{ steps.buildozer.outputs.filename }}" >> $GITHUB_ENV
